# spec/openapi.yaml
@@ -169,6 +169,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /api/todos/{todo_id}/reassign:
+    post:
+      summary: Reassign Todo
+      operationId: reassign_todo_api_todos__todo_id__reassign_post
+      parameters:
+      - name: todo_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Todo Id
+      responses:
+        '204':
+          description: Successful Response
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /api/todos/{todo_id}/events:
     get:
       summary: Todo Events
